// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginScreen should render 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoginScreen
    onForgotPress={[Function]}
    onLogInPress={[Function]}
    onSignUpPress={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "behavior": "padding",
      "children": <CenteredScreen
        footerImage="forest"
      >
        <Component>
          <Pad
            height={100}
          />
          <Heading
            label="log in"
            size="large"
          />
        </Component>
        <Pad
          height={44}
        />
        <TextInput
          hasError={false}
          type="Email"
        />
        <Pad
          height={12}
        />
        <TextInput
          hasError={false}
          type="Password"
        />
        <Pad
          height={44}
        />
        <Button
          label="log in"
          onPress={[Function]}
          type="Primary"
        />
        <Pad
          height={15}
        />
        <LinkGroup
          data={
            Array [
              Object {
                "label": "Forgot password",
                "onPress": [Function],
              },
              Object {
                "label": "Sign up",
                "onPress": [Function],
              },
            ]
          }
        />
      </CenteredScreen>,
      "enabled": true,
      "keyboardVerticalOffset": 0,
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component>
            <Pad
              height={100}
            />
            <Heading
              label="log in"
              size="large"
            />
          </Component>,
          <Pad
            height={44}
          />,
          <TextInput
            hasError={false}
            type="Email"
          />,
          <Pad
            height={12}
          />,
          <TextInput
            hasError={false}
            type="Password"
          />,
          false,
          <Pad
            height={44}
          />,
          <Button
            label="log in"
            onPress={[Function]}
            type="Primary"
          />,
          <Pad
            height={15}
          />,
          <LinkGroup
            data={
              Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [Function],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [Function],
                },
              ]
            }
          />,
        ],
        "footerImage": "forest",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Pad
                height={100}
              />,
              <Heading
                label="log in"
                size="large"
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "height": 100,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "label": "log in",
                "size": "large",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 44,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": undefined,
            "hasError": false,
            "onChange": undefined,
            "type": "Email",
            "value": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 12,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": undefined,
            "hasError": false,
            "onChange": undefined,
            "type": "Password",
            "value": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 44,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "log in",
            "onPress": [Function],
            "type": "Primary",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 15,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "data": Array [
              Object {
                "label": "Forgot password",
                "onPress": [Function],
              },
              Object {
                "label": "Sign up",
                "onPress": [Function],
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "behavior": "padding",
        "children": <CenteredScreen
          footerImage="forest"
        >
          <Component>
            <Pad
              height={100}
            />
            <Heading
              label="log in"
              size="large"
            />
          </Component>
          <Pad
            height={44}
          />
          <TextInput
            hasError={false}
            type="Email"
          />
          <Pad
            height={12}
          />
          <TextInput
            hasError={false}
            type="Password"
          />
          <Pad
            height={44}
          />
          <Button
            label="log in"
            onPress={[Function]}
            type="Primary"
          />
          <Pad
            height={15}
          />
          <LinkGroup
            data={
              Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [Function],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [Function],
                },
              ]
            }
          />
        </CenteredScreen>,
        "enabled": true,
        "keyboardVerticalOffset": 0,
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component>
              <Pad
                height={100}
              />
              <Heading
                label="log in"
                size="large"
              />
            </Component>,
            <Pad
              height={44}
            />,
            <TextInput
              hasError={false}
              type="Email"
            />,
            <Pad
              height={12}
            />,
            <TextInput
              hasError={false}
              type="Password"
            />,
            false,
            <Pad
              height={44}
            />,
            <Button
              label="log in"
              onPress={[Function]}
              type="Primary"
            />,
            <Pad
              height={15}
            />,
            <LinkGroup
              data={
                Array [
                  Object {
                    "label": "Forgot password",
                    "onPress": [Function],
                  },
                  Object {
                    "label": "Sign up",
                    "onPress": [Function],
                  },
                ]
              }
            />,
          ],
          "footerImage": "forest",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Pad
                  height={100}
                />,
                <Heading
                  label="log in"
                  size="large"
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "height": 100,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "label": "log in",
                  "size": "large",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 44,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "errorMessage": undefined,
              "hasError": false,
              "onChange": undefined,
              "type": "Email",
              "value": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 12,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "errorMessage": undefined,
              "hasError": false,
              "onChange": undefined,
              "type": "Password",
              "value": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 44,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "label": "log in",
              "onPress": [Function],
              "type": "Primary",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 15,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "data": Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [Function],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [Function],
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`LoginScreen should render on Android 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoginScreen
    onForgotPress={[Function]}
    onLogInPress={[Function]}
    onSignUpPress={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "behavior": "padding",
      "children": <CenteredScreen
        footerImage="forest"
      >
        <Component>
          <Pad
            height={100}
          />
          <Heading
            label="log in"
            size="large"
          />
        </Component>
        <Pad
          height={44}
        />
        <TextInput
          hasError={false}
          type="Email"
        />
        <Pad
          height={12}
        />
        <TextInput
          hasError={false}
          type="Password"
        />
        <Pad
          height={44}
        />
        <Button
          label="log in"
          onPress={[Function]}
          type="Primary"
        />
        <Pad
          height={15}
        />
        <LinkGroup
          data={
            Array [
              Object {
                "label": "Forgot password",
                "onPress": [Function],
              },
              Object {
                "label": "Sign up",
                "onPress": [Function],
              },
            ]
          }
        />
      </CenteredScreen>,
      "enabled": true,
      "keyboardVerticalOffset": 0,
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component>
            <Pad
              height={100}
            />
            <Heading
              label="log in"
              size="large"
            />
          </Component>,
          <Pad
            height={44}
          />,
          <TextInput
            hasError={false}
            type="Email"
          />,
          <Pad
            height={12}
          />,
          <TextInput
            hasError={false}
            type="Password"
          />,
          false,
          <Pad
            height={44}
          />,
          <Button
            label="log in"
            onPress={[Function]}
            type="Primary"
          />,
          <Pad
            height={15}
          />,
          <LinkGroup
            data={
              Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [Function],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [Function],
                },
              ]
            }
          />,
        ],
        "footerImage": "forest",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Pad
                height={100}
              />,
              <Heading
                label="log in"
                size="large"
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "height": 100,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "label": "log in",
                "size": "large",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 44,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": undefined,
            "hasError": false,
            "onChange": undefined,
            "type": "Email",
            "value": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 12,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": undefined,
            "hasError": false,
            "onChange": undefined,
            "type": "Password",
            "value": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 44,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "log in",
            "onPress": [Function],
            "type": "Primary",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 15,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "data": Array [
              Object {
                "label": "Forgot password",
                "onPress": [Function],
              },
              Object {
                "label": "Sign up",
                "onPress": [Function],
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "behavior": "padding",
        "children": <CenteredScreen
          footerImage="forest"
        >
          <Component>
            <Pad
              height={100}
            />
            <Heading
              label="log in"
              size="large"
            />
          </Component>
          <Pad
            height={44}
          />
          <TextInput
            hasError={false}
            type="Email"
          />
          <Pad
            height={12}
          />
          <TextInput
            hasError={false}
            type="Password"
          />
          <Pad
            height={44}
          />
          <Button
            label="log in"
            onPress={[Function]}
            type="Primary"
          />
          <Pad
            height={15}
          />
          <LinkGroup
            data={
              Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [Function],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [Function],
                },
              ]
            }
          />
        </CenteredScreen>,
        "enabled": true,
        "keyboardVerticalOffset": 0,
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component>
              <Pad
                height={100}
              />
              <Heading
                label="log in"
                size="large"
              />
            </Component>,
            <Pad
              height={44}
            />,
            <TextInput
              hasError={false}
              type="Email"
            />,
            <Pad
              height={12}
            />,
            <TextInput
              hasError={false}
              type="Password"
            />,
            false,
            <Pad
              height={44}
            />,
            <Button
              label="log in"
              onPress={[Function]}
              type="Primary"
            />,
            <Pad
              height={15}
            />,
            <LinkGroup
              data={
                Array [
                  Object {
                    "label": "Forgot password",
                    "onPress": [Function],
                  },
                  Object {
                    "label": "Sign up",
                    "onPress": [Function],
                  },
                ]
              }
            />,
          ],
          "footerImage": "forest",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Pad
                  height={100}
                />,
                <Heading
                  label="log in"
                  size="large"
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "height": 100,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "label": "log in",
                  "size": "large",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 44,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "errorMessage": undefined,
              "hasError": false,
              "onChange": undefined,
              "type": "Email",
              "value": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 12,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "errorMessage": undefined,
              "hasError": false,
              "onChange": undefined,
              "type": "Password",
              "value": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 44,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "label": "log in",
              "onPress": [Function],
              "type": "Primary",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 15,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "data": Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [Function],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [Function],
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`LoginScreen should render when showingKeyboard 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoginScreen
    onForgotPress={[Function]}
    onLogInPress={[Function]}
    onSignUpPress={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "behavior": "padding",
      "children": <CenteredScreen
        footerImage="forest"
      >
        <Pad
          height={44}
        />
        <TextInput
          hasError={false}
          type="Email"
        />
        <Pad
          height={12}
        />
        <TextInput
          hasError={false}
          type="Password"
        />
        <Pad
          height={44}
        />
        <Button
          label="log in"
          onPress={[Function]}
          type="Primary"
        />
        <Pad
          height={15}
        />
        <LinkGroup
          data={
            Array [
              Object {
                "label": "Forgot password",
                "onPress": [Function],
              },
              Object {
                "label": "Sign up",
                "onPress": [Function],
              },
            ]
          }
        />
      </CenteredScreen>,
      "enabled": true,
      "keyboardVerticalOffset": 0,
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          null,
          <Pad
            height={44}
          />,
          <TextInput
            hasError={false}
            type="Email"
          />,
          <Pad
            height={12}
          />,
          <TextInput
            hasError={false}
            type="Password"
          />,
          false,
          <Pad
            height={44}
          />,
          <Button
            label="log in"
            onPress={[Function]}
            type="Primary"
          />,
          <Pad
            height={15}
          />,
          <LinkGroup
            data={
              Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [Function],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [Function],
                },
              ]
            }
          />,
        ],
        "footerImage": "forest",
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 44,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": undefined,
            "hasError": false,
            "onChange": undefined,
            "type": "Email",
            "value": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 12,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": undefined,
            "hasError": false,
            "onChange": undefined,
            "type": "Password",
            "value": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 44,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "log in",
            "onPress": [Function],
            "type": "Primary",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 15,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "data": Array [
              Object {
                "label": "Forgot password",
                "onPress": [Function],
              },
              Object {
                "label": "Sign up",
                "onPress": [Function],
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "behavior": "padding",
        "children": <CenteredScreen
          footerImage="forest"
        >
          <Pad
            height={44}
          />
          <TextInput
            hasError={false}
            type="Email"
          />
          <Pad
            height={12}
          />
          <TextInput
            hasError={false}
            type="Password"
          />
          <Pad
            height={44}
          />
          <Button
            label="log in"
            onPress={[Function]}
            type="Primary"
          />
          <Pad
            height={15}
          />
          <LinkGroup
            data={
              Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [Function],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [Function],
                },
              ]
            }
          />
        </CenteredScreen>,
        "enabled": true,
        "keyboardVerticalOffset": 0,
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            null,
            <Pad
              height={44}
            />,
            <TextInput
              hasError={false}
              type="Email"
            />,
            <Pad
              height={12}
            />,
            <TextInput
              hasError={false}
              type="Password"
            />,
            false,
            <Pad
              height={44}
            />,
            <Button
              label="log in"
              onPress={[Function]}
              type="Primary"
            />,
            <Pad
              height={15}
            />,
            <LinkGroup
              data={
                Array [
                  Object {
                    "label": "Forgot password",
                    "onPress": [Function],
                  },
                  Object {
                    "label": "Sign up",
                    "onPress": [Function],
                  },
                ]
              }
            />,
          ],
          "footerImage": "forest",
        },
        "ref": null,
        "rendered": Array [
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 44,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "errorMessage": undefined,
              "hasError": false,
              "onChange": undefined,
              "type": "Email",
              "value": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 12,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "errorMessage": undefined,
              "hasError": false,
              "onChange": undefined,
              "type": "Password",
              "value": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 44,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "label": "log in",
              "onPress": [Function],
              "type": "Primary",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 15,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "data": Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [Function],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [Function],
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
